# rust-server

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: kafka_producer.rs  main.rs  ship.rs
