[package]
name = "solar-sytem-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
uuid = {version="0.8.2", features = ["v4", "serde"]}
ws = "0.9.2"
warp="0.3.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }